// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeoPushpinChart > with latitude and longitude only with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "longitude_df",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "latitude",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "longitude_df",
          },
        },
      ],
      "localIdentifier": "longitude",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "longitude_df",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with latitude and longitude only with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with legend on the left > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with legend on the left > should create expected props for core chart 1`] = `
{
  "config": {
    "legend": {
      "enabled": false,
      "position": "left",
    },
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with legend on the right > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with legend on the right > should create expected props for core chart 1`] = `
{
  "config": {
    "legend": {
      "enabled": true,
      "position": "right",
    },
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and color > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and color > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and color with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and color with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and segment > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
      ],
    },
  ],
  "filters": [],
  "measures": [],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and segment > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and segment with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and segment with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and size  with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and size  with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location and size > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location and size > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location only > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
      ],
    },
  ],
  "filters": [],
  "measures": [],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location only > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location only with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location only with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment and color > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment and color > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment and size > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment and size > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment, color with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment, color with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment, size and color  > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment, size and color  > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment, size and color with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment, size and color with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment, size and color with tooltip and filter > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [
    {
      "positiveAttributeFilter": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "in": {
          "values": [
            "California",
            "Florida",
            "Texas",
          ],
        },
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment, size and color with tooltip and filter > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, segment, size with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.state_name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.state_name",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.state_name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.state_name",
          },
        },
      ],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "a_label.uscities.state_name",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, segment, size with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, size and color > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, size and color > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;

exports[`GeoPushpinChart > with location, size and color with tooltip > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city.location",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.uscities.city.location",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "alias": "Population",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.population",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_f508857c_fact.uscities.population_sum",
          },
        },
      ],
      "localIdentifier": "size",
    },
    {
      "items": [
        {
          "measure": {
            "alias": "Density",
            "definition": {
              "measureDefinition": {
                "aggregation": "sum",
                "item": {
                  "identifier": "fact.uscities.density",
                  "type": "fact",
                },
              },
            },
            "format": "#,##0.00",
            "localIdentifier": "m_35a08895_fact.uscities.density_sum",
          },
        },
      ],
      "localIdentifier": "color",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city.location",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.uscities.city.location",
          },
        },
      ],
      "localIdentifier": "location",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.uscities.city",
              "type": "displayForm",
            },
            "localIdentifier": "tooltipText_df",
          },
        },
      ],
      "localIdentifier": "tooltipText",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.uscities.city.location",
        "tooltipText_df",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "alias": "Population",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.population",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_f508857c_fact.uscities.population_sum",
      },
    },
    {
      "measure": {
        "alias": "Density",
        "definition": {
          "measureDefinition": {
            "aggregation": "sum",
            "item": {
              "identifier": "fact.uscities.density",
              "type": "fact",
            },
          },
        },
        "format": "#,##0.00",
        "localIdentifier": "m_35a08895_fact.uscities.density_sum",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "live-examples-workspace",
}
`;

exports[`GeoPushpinChart > with location, size and color with tooltip > should create expected props for core chart 1`] = `
{
  "config": {
    "mapboxToken": "this-is-not-real-token",
    "showLabels": false,
    "tooltipText": {
      "attribute": {
        "displayForm": {
          "identifier": "label.uscities.city",
          "type": "displayForm",
        },
        "localIdentifier": "tooltipText_df",
      },
    },
  },
  "error": null,
  "exportTitle": "GeoPushpinChart",
  "isLoading": true,
  "onDataTooLarge": [Function],
  "onNegativeValues": [Function],
  "theme": {},
  "themeIsLoading": undefined,
}
`;
